--- a/web/animais.xhtml
+++ b/web/animais.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Help Pet - Animais</title>
 
@@ -54,66 +55,25 @@
                 <h3 align="center" style="color: white;">Animais para adoção</h3>
                 <hr/>
                 <br/>
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Gato 1</h5>
-                            <div align="left">
-                                <p>Espécie: Gato</p>
-                                <p>Local: Natal/RN</p>
+                <h:form>
+                    <c:forEach var="animal" items="#{animalBean.animaisTop}">
+                        <div class="col-xs-18 col-sm-6 col-md-3">
+                            <div class="thumbnail caixa">
+                                <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
+                                <div class="caption" align="center">
+                                    <h5>#{animal.nomeAnimal}</h5>
+                                    <h:inputHidden value="#{animal.idAnimal}"/>
+                                    <div align="left">
+                                        <p>Espécie: #{animal.especie}</p>
+                                        <p>Local: #{animal.localizacao}</p>
+                                    </div>
+                                    <p><h:commandLink action="#{animalBean.VerAnimal(animal)}" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</h:commandLink></p>
+                                </div>
                             </div>
-                            <p><a href="detalhamentoAnimal.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
                         </div>
-                    </div>
-                </div>
+                    </c:forEach>
+                </h:form>
 
-
-
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Gato 2</h5>
-                            <div align="left">
-                                <p>Espécie: Gato</p>
-                                <p>Local: Natal/RN</p>
-                            </div>
-                            <p><a href="detalhamentoAnimal.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Gato 3</h5>
-                            <div align="left">
-                                <p>Espécie: Gato</p>
-                                <p>Local: Natal/RN</p>
-                            </div>
-                            <p><a href="detalhamentoAnimal.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Gato 4</h5>
-                            <div align="left">
-                                <p>Espécie: Gato</p>
-                                <p>Local: Natal/RN</p>
-                            </div>
-
-                            <p><a href="detalhamentoAnimal.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
-                        </div>
-                    </div>
-                </div>
 
                 <div align="right">
                     <p><a href="buscarAnimal.jsf" class="btn btn-default" style="background-color: white; color: #ffa812; font-weight:bold; width: 60px; height: 60px;border-radius:100%;">
@@ -239,13 +199,13 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
         <script>
-            $(document).ready(function() {
-                $("#click").click(function() {
+            $(document).ready(function () {
+                $("#click").click(function () {
                     $('html, body').animate({
                         scrollTop: $("#adote").offset().top
-            }, 2000);
+                    }, 2000);
                 });
-                });
+            });
         </script>
 
 
