--- a/web/anuncios.xhtml
+++ b/web/anuncios.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Help Pet - Anúncio</title>
 
@@ -55,202 +56,56 @@
                 <h3 align="center" style="color: white;">Anúncios</h3>
                 <hr/>
                 <br/>
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Melhor ração para o seu gato</h5>
+                <c:forEach var="anuncio" items="#{anuncioBean.anuncios}">
+                    <div class="col-xs-18 col-sm-6 col-md-3">
+                        <div class="thumbnail caixa">
+                            <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
+                            <div class="caption" align="center">
+                                <h5>#{anuncio.tituloAnuncio}</h5>
 
-                            <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal1" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
+                                <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal1" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
 
-                            <!-- Detalhamento da anúncio 1 -->
+                                <!-- Detalhamento da anúncio 1 -->
 
-                            <div class="modal fade" id="myModal1" role="dialog">
-                                <div class="modal-dialog">
+                                <div class="modal fade" id="myModal1" role="dialog">
+                                    <div class="modal-dialog">
 
-                                    <!-- Conteúdo -->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Melhor ração para o seu gato</h4>
-                                        </div>
-                                        <div class="modal-body">
+                                        <!-- Conteúdo -->
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title">#{anuncio.tituloAnuncio}</h4>
+                                            </div>
+                                            <div class="modal-body">
 
-                                            <div class="col-md-12">
-                                                <div class="row">
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <div align="left">
-                                                            <p>Descrição: A melhor ração para o seu bichinho, e com o melhor preço.</p>
+                                                <div class="col-md-12">
+                                                    <div class="row">
+                                                        <div class="col-md-1">
+                                                        </div>
+                                                        <div class="col-md-5">
+                                                            <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                        </div>
+                                                        <div class="col-md-5">
+                                                            <div align="left">
+                                                                <p>#{anuncio.descricaoAnuncio}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-1">
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-1">
-                                                    </div>
                                                 </div>
-                                            </div>
 
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" style="background-color: #1E90FF; color: white; border-radius: 0px;" data-dismiss="modal">Fechar</button>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" style="background-color: #1E90FF; color: white; border-radius: 0px;" data-dismiss="modal">Fechar</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Melhor ração para o seu gato</h5>
-
-                            <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal2" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
-
-                            <!-- Detalhamento da anúncio 2 -->
-
-                            <div class="modal fade" id="myModal2" role="dialog">
-                                <div class="modal-dialog">
-
-                                    <!-- Conteúdo -->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Melhor ração para o seu gato</h4>
-                                        </div>
-                                        <div class="modal-body">
-
-                                            <div class="col-md-12">
-                                                <div class="row">
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <div align="left">
-                                                            <p>Descrição: A melhor ração para o seu bichinho, e com o melhor preço.</p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" style="background-color: #1E90FF; color: white; border-radius: 0px;" data-dismiss="modal">Fechar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Melhor ração para o seu gato</h5>
-
-                            <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal3" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
-
-                            <!-- Detalhamento da anúncio 3 -->
-
-                            <div class="modal fade" id="myModal3" role="dialog">
-                                <div class="modal-dialog">
-
-                                    <!-- Conteúdo -->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Melhor ração para o seu gato</h4>
-                                        </div>
-                                        <div class="modal-body">
-
-                                            <div class="col-md-12">
-                                                <div class="row">
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <div align="left">
-                                                            <p>Descrição: A melhor ração para o seu bichinho, e com o melhor preço.</p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" style="background-color: #1E90FF; color: white; border-radius: 0px;" data-dismiss="modal">Fechar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>Melhor ração para o seu gato</h5>
-
-                            <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal4" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
-
-                            <!-- Detalhamento da anúncio 4 -->
-
-                            <div class="modal fade" id="myModal4" role="dialog">
-                                <div class="modal-dialog">
-
-                                    <!-- Conteúdo -->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Melhor ração para o seu gato</h4>
-                                        </div>
-                                        <div class="modal-body">
-
-                                            <div class="col-md-12">
-                                                <div class="row">
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <div align="left">
-                                                            <p>Descrição: A melhor ração para o seu bichinho, e com o melhor preço.</p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" style="background-color: #1E90FF; color: white; border-radius: 0px;" data-dismiss="modal">Fechar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                </c:forEach>
 
 
                 <div align="right">
@@ -363,8 +218,8 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
         <script>
-            $(document).ready(function() {
-                $("#click").click(function() {
+            $(document).ready(function () {
+                $("#click").click(function () {
                     $('html, body').animate({
                         scrollTop: $("#anuncio").offset().top
                     }, 2000);
