--- a/web/animal.xhtml
+++ b/web/animal.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Help Pet - Animal</title>
 
@@ -43,8 +44,14 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-12" align="center">
-                                <h3 style="color: #ffa812;">Adote</h3>
-                                <h5 style="color: #1E90FF;">Gostou desse bichinho? Marque um encontre com o responsável do animal.</h5>
+                                <c:if test="#{animalBean.animal.tipoAnimal == 'Adoção'}">
+                                    <h3 style="color: #ffa812;">Animal para Adoção</h3>
+                                    <h5 style="color: #1E90FF;">Gostou desse bichinho? Marque um encontre com o responsável do animal.</h5>
+                                </c:if>
+                                <c:if test="#{animalBean.animal.tipoAnimal == 'Perdido'}">
+                                    <h3 style="color: #ffa812;">Animal Perdido</h3>
+                                    <h5 style="color: #1E90FF;">Encontrou esse bichinho? Marque um encontre com o dono do animal.</h5>
+                                </c:if>
                             </div>
                         </div>
                     </div>
@@ -93,7 +100,18 @@
 
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <p><a href="#" data-toggle="modal" data-target="#encontro" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;">Marcar encontro</a></p>
+                                                    <c:if test="#{loginBean.usuarioLogado != null and animalBean.animal.idUsuario != loginBean.usuarioLogado.idUsuario}">
+                                                        <p><a href="#" data-toggle="modal" data-target="#encontro" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;">Marcar encontro</a></p>
+                                                    </c:if>
+                                                    
+                                                    <c:if test="#{loginBean.usuarioLogado != null and animalBean.animal.idUsuario == loginBean.usuarioLogado.idUsuario}">
+                                                        <p>
+                                                            <h:form>
+                                                                <h:commandLink action="#{animalBean.EditarAnimal()}" value="Editar" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
+                                                            </h:form>
+                                                        </p>
+                                                    </c:if>
+                                                        
                                                 </div>
                                             </div>
                                         </div>
@@ -134,94 +152,34 @@
                                 <div class="row">
 
                                     <div class="col-md-3" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;padding-top: 5px;">
-                                            Estado:  
+                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
+                                            Data:  
                                         </label>
                                     </div>
                                     <div class="col-md-9">
-                                        <h:selectOneMenu value="#" style="color: black; width: 100%;" class="form-control">
-                                            <f:selectItem itemLabel="Acre" itemValue="ac"/>
-                                            <f:selectItem itemLabel="Alagoas" itemValue="al"/>
-                                            <f:selectItem itemLabel="Amapá" itemValue="ap"/>
-                                            <f:selectItem itemLabel="Amazonas" itemValue="am"/>
-                                            <f:selectItem itemLabel="Bahia" itemValue="ba"/>
-                                            <f:selectItem itemLabel="Ceará" itemValue="ce"/>
-                                            <f:selectItem itemLabel="Distrito Federal" itemValue="df"/>
-                                            <f:selectItem itemLabel="Espírito Santo" itemValue="es"/>
-                                            <f:selectItem itemLabel="Goiás" itemValue="go"/>
-                                            <f:selectItem itemLabel="Maranhão" itemValue="ma"/>
-                                            <f:selectItem itemLabel="Mato Grosso" itemValue="mt"/>
-                                            <f:selectItem itemLabel="Mato Grosso do Sul" itemValue="ms"/>
-                                            <f:selectItem itemLabel="Minas Gerais" itemValue="mg"/>
-                                            <f:selectItem itemLabel="Pará" itemValue="pa"/>
-                                            <f:selectItem itemLabel="Paraíba" itemValue="pb"/>
-                                            <f:selectItem itemLabel="Paraná" itemValue="pr"/>
-                                            <f:selectItem itemLabel="Pernambuco	" itemValue="pe"/>
-                                            <f:selectItem itemLabel="Piauí" itemValue="pi"/>
-                                            <f:selectItem itemLabel="Rio de Janeiro" itemValue="rj"/>
-                                            <f:selectItem itemLabel="Rio Grande do Norte" itemValue="rn"/>
-                                            <f:selectItem itemLabel="Rio Grande do Sul" itemValue="rs"/>
-                                            <f:selectItem itemLabel="Rondônia" itemValue="ro"/>
-                                            <f:selectItem itemLabel="Roraima" itemValue="rr"/>
-                                            <f:selectItem itemLabel="Santa Catarina" itemValue="sc"/>
-                                            <f:selectItem itemLabel="São Paulo" itemValue="sp"/>
-                                            <f:selectItem itemLabel="Sergipe" itemValue="se"/>
-                                            <f:selectItem itemLabel="Tocantins" itemValue="to"/>
-                                        </h:selectOneMenu>
+                                        <h:inputText value="#{animalBean.encontro.dataEncontro}" class="form-control" style="width: 100%;font-size: 14px;"/>
+                                    </div>
 
-
-                                    </div>
-                                    <div class="col-md-3" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;padding-top: 5px;">
-                                            Cidade:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                    </div>
-                                    <div class="col-md-3" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Bairro:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                    </div>
-                                    <div class="col-md-3" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Rua:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                    </div>
-                                    <div class="col-md-3" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Número:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                    </div>
-                                    <div class="col-md-3" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Complemento:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                    </div>
                                     <div class="col-md-3" align="left">
                                         <label style="font-size: 14px;color: black; padding-left: 10px;">
                                             Hora:  
                                         </label>
                                     </div>
                                     <div class="col-md-9">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
+                                        <h:inputText value="#{animalBean.encontro.horarioEncontro}" class="form-control" style="width: 100%;font-size: 14px;"/>
+                                    </div>
+
+                                    <div class="col-md-3" align="left">
+                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
+                                            Local:  
+                                        </label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <h:inputText value="#{animalBean.encontro.localizacao}" class="form-control" style="width: 100%;font-size: 14px;"/>
                                     </div>
                                     <div class="col-md-12">
                                         <br/>
-                                        <h:commandButton action="adocao.xhtml" value="Marcar encontro" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px; width: 100%;" />
+                                        <h:commandButton action="#{animalBean.SalvarEncontro()}" value="Marcar encontro" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px; width: 100%;" />
                                         <br/>
                                     </div>
                                 </div>
