--- a/web/eventos.xhtml
+++ b/web/eventos.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Help Pet - Eventos</title>
+        <title>Help Pet - Cadastro de eventos</title>
 
         <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon"></link>
 
