--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -36,7 +36,7 @@
         <div id="header">
             <ui:insert name="header">
                 <!-- Import de página de menu -->
-                <ui:include src="menu.xhtml"/>
+                <ui:include src="menuUsuario.xhtml"/>
             </ui:insert>
         </div>
 
